# analytics_engineer_exercise

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.ipynb_checkpoints/: analytics_engineer_exercise_notebook-checkpoint.ipynb  duckdb_ref-checkpoint.ipynb  explore_data-checkpoint  explore_data-checkpoint.ipynb  explore_data_v04-checkpoint.ipynb
macros/: _macros.yml  generate_schema_name.sql
models/_sources/: _sources.yml
models/base/: _base.yml  base_pricing__prices.sql  base_pricing__rules.sql
models/mart/: _mart.yml  dim_locations.sql  fact_prices_tariffs.sql
seeds/: day_of_week_map.csv
