[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true

[tool.poetry]
name = "analytics_engineer_exercise"
version = "0.1.0"
description = "An exercise for mid-level analytics engineers"
authors = ["Padraig Alton <padraig.alton@justpark.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.8.4"
dbt-duckdb = "^1.8.2"
duckdb = "^1.0.0"
jupyter = "^1.0.0"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
